--- a/website/style/header.css
+++ b/website/style/header.css
@@ -1,33 +1,37 @@
 header {
-    display: flex;
-    padding: 1em 1em 0em 1em;
-    height: 10vh;
-    margin: auto;
-    align-items: center;
-    transition: ease-in 0.2s;
-    z-index: 10000;
+  display: flex;
+  padding: 1em 1em 0em 1em;
+  height: 10vh;
+  margin: auto;
+  align-items: center;
+  transition: ease-in 0.2s;
+  z-index: 10000;
+  box-shadow: 0px 5px 5px 0px gray;
 }
 
 header .logo {
-    display: flex;
-    flex: 1;
+  display: flex;
+  flex: 1;
 }
 
-.h1 span {
-    color: #13C843;
+.logo span {
+  color: #13c843;
 }
 
 header .header-right {
-    display: flex;
-    justify-content: space-around;
-    flex: 1;
+  display: flex;
+  justify-content: space-around;
+  flex: 1;
 }
 
 .header-right a {
-    text-decoration: none;
-    color: black;
+  text-decoration: none;
+  color: black;
+}
+.header-right a:hover {
+  text-shadow: 1px 1px 2px lightgreen, 0 0 25px green, 0 0 5px darkgreen;
 }
 
 a .active {
-    color: blue;
+  color: blue;
 }
