--- a/website/style/index.css
+++ b/website/style/index.css
@@ -5,8 +5,7 @@
   justify-items: center;
   font-family: "Roboto", sans-serif;
 }
-
-section {
+.tracks {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
   grid-gap: 1em;
